[Change] Fixed spacing on zozor desktop page

--- a/03-zozor/style.css
+++ b/03-zozor/style.css
@@ -188,10 +188,12 @@ nav a:hover {
 
 /* Body */
 section {
-    display: flex;
+    display: grid;
+    grid-template-columns: 70vw 25vw;
     /* justify-content: center; */
-    background-color: white;
+    background-color: #1f1f24;
     /* border: 1px solid transparent; */
+    width: 100vw;
     height: 70vh;
 }
 
@@ -205,10 +207,11 @@ aside {
 }
 
 article {
+    background-color: white;
     overflow: auto;
-    width: 75vw;
+    /* width: 75vw; */
     margin-right: 1vw;
-    padding: 10px;
+    padding: 2rem;
     font-size: 1.1em;
 }
 
@@ -262,7 +265,7 @@ aside {
     background-color: #1f1f24;
     /* box-shadow: 0px 2px 5px #1c1a19; */
     margin-left: 0vw;
-    padding-right: 50px;
+    padding: 20rem;
     width: 25vw;
     border-radius: 2px;
     padding: 10px;
@@ -384,4 +387,31 @@ footer h1 {
 #return a {
     text-decoration: none;
     color: #1f1f24;
+}
+
+/* responsive */
+@media only screen and (max-width: 767px){
+    html,body{
+        overflow-x: hidden;
+    }
+
+    nav a{
+        font-size: 1rem;
+    }
+
+    section{
+        grid-template-columns: 1fr;
+        height: auto;
+        margin: 0;
+    }
+    aside{
+        padding: 1rem;
+        width: 95vw;
+        /* height: 50vh; */
+    }
+
+    #return{
+        margin: 1rem 0 0 1.25rem;
+        font-size: 1rem;
+    }
 }
